# lifelike

./: CMakeLists.txt  README.md
share/lifelike/: life.lua
